--- a/dynamic_report.Rmd
+++ b/dynamic_report.Rmd
@@ -32,6 +32,11 @@ body {
   font-family: "Times New Roman";
   color: #36454F
 }
+
+img{
+border: 5px solid #555555;
+
+}
 ```
 
 ## Social media Ads and its effects on users
@@ -75,6 +80,7 @@ max_time_used <- max(latest_data$Time_minutes)
 mean_time_used <-mean(latest_data$Time_minutes)
 ```
 
-The minimum time spent on a social media app was `r min_time_used` minutes, the mean time was `r mean_time_used` minutes and the maximum time was `r mean_time_used` minutes.
+## Additional Data
+The minimum time spent on a social media app was `r min_time_used` minutes, the mean time was `r mean_time_used` minutes and the maximum time was `r max_time_used` minutes.
 
 
